# Network-A-V-in-OBS-Studio

./: CMakeLists.txt
.github/workflows/: main.yml
CI/: package-xenial.sh
cmake/: legacy.cmake
cmake/bundle/macos/: installer-macos.pkgproj.in
cmake/bundle/windows/: installer-Windows.iss.in
cmake/macos/: Info.plist.in
cmake/windows/: obs-module.rc.in
data/locale/: ca-ES.ini  en-US.ini  fr-FR.ini  zh-CN.ini
src/: Config.cpp  main-output.cpp  main-output.h  obs-ndi-filter.cpp  obs-ndi-output.cpp  obs-ndi-source.cpp  obs-ndi.cpp  obs-ndi.h  plugin-main.cpp  premultiplied-alpha-filter.cpp  preview-output.cpp  preview-output.h
src/forms/: output-settings.cpp
